# Kite_V1

./: .gitignore  Kite_V1.PrjPcb  README.md  pull.sh  push.sh
SCH/: MCU.SchDoc
SCH/__Previews/: MCU.SchDocPreview
code/lvgl_demo/: CMakeLists.txt  Makefile  build.bat  env.bat  log.txt  lvgl-demo.code-workspace  mypartition.csv  sdkconfig  sdkconfig.old
code/lvgl_demo/components/key/: CMakeLists.txt  key.c  key.h
code/lvgl_demo/components/lcd/: CMakeLists.txt  lcd_st7735s.c  lcd_st7735s.h
code/lvgl_demo/components/led/: CMakeLists.txt  component.mk  led.c  led.h
code/lvgl_demo/components/lvgl/: CMakeLists.txt
code/lvgl_demo/components/lvgl/src/: lv_conf_internal.h
code/lvgl_demo/components/lvgl/user/: lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
code/lvgl_demo/components/utility/: CMakeLists.txt  ug_log.c  ug_log.h
code/lvgl_demo/main/: CMakeLists.txt  main.c
hardware_package/: Kite_V1.0.SchLib
